dodane (g)astro i opisy

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             </div>
         </div>
 
-        <div id="acc-fuw" class="accordion-item" style="border-left-color: #f37034;">
+       <div id="acc-fuw" class="accordion-item" style="border-left-color: #f37034;">
             <div class="accordion-header" onclick="toggleAcc(this)">
                 <span style="display: flex; align-items: center; gap: 10px; color: #f37034;">
                     🪐 FUW VIBE
@@ -470,6 +470,13 @@
                 <i class="fa-solid fa-chevron-down"></i>
             </div>
             <div class="accordion-content">
+                <div style="text-align: center; padding: 10px; margin-bottom: 20px; color: #555;">
+                    <p style="margin: 0; font-style: italic; line-height: 1.5;">
+                        Zbiór wszystkiego co związane z FUW-em.<br>
+                        <strong style="color: #f37034;">Od studentów FUW-u dla studentów FUW-u</strong><br>
+                        – w jednym miejscu, żeby nie przeszukiwać wszystkich sekcji (chociaż serdecznie zachęcamy!).
+                    </p>
+                </div>
                 <div class="grid">
                     <script>
                         const fuwItems = [
@@ -487,7 +494,8 @@
                             { file: "fizykburger.png", name: "certified fan of fizykburger" },
                             { file: "wmed (33).png", name: "szrodinger" },
                             { file: "wmed (19).png", name: "najwazniejszy filar wydziału" },
-                            { file: "wmed (3).png", name: "czarna dziura" }
+                            { file: "wmed (3).png", name: "czarna dziura" },
+                            { file: "(g)astro.png", name: "kocham (g)astro" }
                         ];
                         fuwItems.forEach((item, i) => {
                             document.write(`
@@ -515,6 +523,14 @@
                 <i class="fa-solid fa-chevron-down"></i>
             </div>
             <div class="accordion-content">
+                <div style="text-align:center; color:#b7950b; margin-bottom:25px; padding: 0 10px;">
+                    <p style="margin:0; font-style:italic; font-size:1rem; font-weight: bold;">
+                        "Jedyny. Niepowtarzalny. Legenda Kampusu."
+                    </p>
+                    <small style="color:#999; display:block; margin-top:5px;">
+                        Kupując ten pin, +10 do zdawalności egzaminów. (Niepotwierdzone info)
+                    </small>
+                </div>
                 <div class="grid">
                     <div class="card gold-edition">
                         <img src="dziekan.png" alt="Dziekan Turzyński" onclick="openLightbox(this.src)" onerror="this.src='https://via.placeholder.com/150?text=DZIEKAN'">
@@ -581,7 +597,13 @@
                 <i class="fa-solid fa-chevron-down"></i>
             </div>
             <div class="accordion-content">
-                <div class="grid">
+                <div style="text-align: center; padding: 10px; margin-bottom: 15px; color: #636e72;">
+                    <p style="margin: 0; font-style: italic; line-height: 1.5;">
+                        Szukasz idealnego drobiazgu pod choinkę? 🎁 Te piny to strzał w dziesiątkę!<br>
+                        Z naszymi przypinkami <b>świąteczny vibe trwa cały rok!</b> ✨
+                    </p>
+                </div>
+                <div class="grid" style="background-image: radial-gradient(#e74c3c22 1px, transparent 1px); background-size: 20px 20px;">
                     <script>
                         const xmas = [
                             {name: "Merry Christmas", file: "wmed (46).png"}, 
@@ -618,6 +640,12 @@
                 <i class="fa-solid fa-chevron-down"></i>
             </div>
             <div class="accordion-content">
+                <div style="text-align: center; padding: 10px; margin-bottom: 15px; color: #636e72;">
+                    <p style="margin: 0; font-style: italic;">
+                        Bądź sobą, kochaj kogo chcesz i <b>noś te barwy z dumą!</b> 💖<br>
+                        Equality, Respect & Gay Power.
+                    </p>
+                </div>
                 <div class="grid">
                     <script>
                         const prideItems = [
@@ -645,7 +673,7 @@
                 </div>
             </div>
         </div>
-
+        
         <div id="acc-blind" class="accordion-item" style="border-left-color: #2d3436;">
             <div class="accordion-header" onclick="toggleAcc(this)">
                 <span style="letter-spacing: 1px;">🔮 MYSTERY BOX </span>
@@ -679,6 +707,17 @@
                 <i class="fa-solid fa-chevron-down"></i>
             </div>
             <div class="accordion-content" style="background:#1a1a1a;">
+                
+                <div style="text-align:center; color:#ddd; margin-bottom:25px; padding: 0 10px;">
+                    <p style="margin:0; font-style:italic; font-size:0.95rem; line-height:1.4;">
+                        "Poczuj się jak szejk na stołówce. Te piny krzyczą: <br> 
+                        <strong style="color:var(--accent);">'Dostałem stypendium Rektora'</strong> <br>
+                        (albo pożyczyłem od mamy)."
+                    </p>
+                    <small style="color:#888; display:block; margin-top:5px;">
+                        ✨ 100% prestiżu ✨
+                    </small>
+                </div>
                 <div class="grid">
                     <div class="card prestige">
                         <img src="dubajska_czekolada.png" alt="Dubaj" onclick="openLightbox(this.src)">
@@ -1115,4 +1154,5 @@
 
 </body>
 </html>
+
 
