--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                             { file: "wmed (33).png", name: "szrodinger" },
                             { file: "wmed (19).png", name: "najwazniejszy filar wydziału" },
                             { file: "wmed (3).png", name: "czarna dziura" },
-                            { file: "(g)astro.png", name: "kocham (g)astro" }
+                            { file: "gastro.png", name: "kocham (g)astro" }
                         ];
                         fuwItems.forEach((item, i) => {
                             document.write(`
@@ -1154,5 +1154,6 @@
 
 </body>
 </html>
+
 
 
