--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             --radius: 16px;
             --banner-1-height: 60px;
             --banner-2-height: 45px;
-            --header-height: 70px; /* Zmniejszyłem lekko, żeby było zgrabniej */
+            --header-height: 70px; 
             --top-gap: 0px;
         }
 
@@ -1154,6 +1154,7 @@
 
 </body>
 </html>
+
 
 
 
