--- a/index.html
+++ b/index.html
@@ -494,8 +494,10 @@
                             { file: "fizykburger.png", name: "certified fan of fizykburger" },
                             { file: "wmed (33).png", name: "szrodinger" },
                             { file: "wmed (19).png", name: "najwazniejszy filar wydziału" },
+                            { file: "powerplant_marchiew.png", name: "power plant ale to power marchiew" },
                             { file: "wmed (3).png", name: "czarna dziura" },
-                            { file: "gastro.png", name: "kocham gastro" } 
+                            { file: "gastro.png", name: "kocham gastro" },
+                            { file: "employee.png", name: "im the bestest here" }
                         ];
                         
                         fuwItems.forEach((item, i) => {
@@ -763,6 +765,9 @@
                             { file: "wmed (42).png", name: "jest we mnie BESTIA" },
                             { file: "wmed (43).png", name: "bojem siem kombiemt" },
                             { file: "wmed (44).png", name: "eepy sleepy" },
+                            { file: "im_angy.png", name: "angy kitty" },
+                            { file: "adhd.png", name: "A Dokąd Hasa Dzik?" },
+                            { file: "jedz_plastik.png", name: "omnom" },
                             { file: "wmed (45).png", name: "zakazane słowa" },
                             { file: "meowbucks.png", name: "mmm kawusia" },
                             { file: "kapibara_książkara.png", name: "kapibara książkara" },
@@ -1155,6 +1160,7 @@
 
 </body>
 </html>
+
 
 
 
