--- a/index.html
+++ b/index.html
@@ -387,7 +387,8 @@
                             {name: "Wydział Medyczny", file: "wmed.png"},
                             {name: "QuantMol", file: "quantmol.png"},
                             {name: "santa SKuNKs", file: "santa_skunks.png"},
-                            {name: "SKuNKs", file: "skunks.png"}
+                            {name: "SKuNKs", file: "skunks.png"},
+                            {name: "Katedra Metod Matematycznych Fizyki", file: "kmmf.png"}
                         ];
                         logos.forEach((item, i) => {
                             document.write(`
@@ -428,6 +429,7 @@
                             { file: "fuw __ skrót (2).png", name: "logo wydziału #2" },
                             { file: "fuw __ skrót (3).png", name: "logo wydziału #3" },
                             { file: "wmed (20).png", name: "Fuw baloon"},
+                            { file: "kmmf.png", name: "Katedra Metod Matematycznych Fizyki"},
                             { file: "wmed (35).png", name: "tak, umiem pisać xi" },
                             { file: "wmed (24).png", name: "wiara czyni cuda" },
                             { file: "wmed (27).png", name: "trywialne" },
@@ -1115,6 +1117,7 @@
 
 </body>
 </html>
+
 
 
 
