--- a/index.html
+++ b/index.html
@@ -388,7 +388,8 @@
                             {name: "QuantMol", file: "quantmol.png"},
                             {name: "santa SKuNKs", file: "santa_skunks.png"},
                             {name: "SKuNKs", file: "skunks.png"},
-                            {name: "Katedra Metod Matematycznych Fizyki", file: "kmmf.png"}
+                            {name: "Katedra Metod Matematycznych Fizyki, mathcal", file: "kmmf.png"},
+                            {name: "Katedra Metod Matematycznych Fizyki", file: "kmmf2.png"}
                         ];
                         logos.forEach((item, i) => {
                             document.write(`
@@ -1117,6 +1118,7 @@
 
 </body>
 </html>
+
 
 
 
