--- a/index.html
+++ b/index.html
@@ -430,7 +430,8 @@
                             { file: "fuw __ skrót (2).png", name: "logo wydziału #2" },
                             { file: "fuw __ skrót (3).png", name: "logo wydziału #3" },
                             { file: "wmed (20).png", name: "Fuw baloon"},
-                            { file: "kmmf.png", name: "Katedra Metod Matematycznych Fizyki"},
+                            {file: "kmmf.png", name: "Katedra Metod Matematycznych Fizyki, mathcal"},
+                            {file: "kmmf2.png", name: "Katedra Metod Matematycznych Fizyki"},
                             { file: "wmed (35).png", name: "tak, umiem pisać xi" },
                             { file: "wmed (24).png", name: "wiara czyni cuda" },
                             { file: "wmed (27).png", name: "trywialne" },
@@ -1118,6 +1119,7 @@
 
 </body>
 </html>
+
 
 
 
