--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <script>
-        window.UPLOADCARE_PUBLIC_KEY = 'bdd457da9418503ae7c0'; // TWÓJ KLUCZ
+        window.UPLOADCARE_PUBLIC_KEY = 'demopublickey'; // TWÓJ KLUCZ
         window.UPLOADCARE_LOCALE = 'pl';
     </script>
     <script src="https://ucarecdn.com/libs/widget/3.x/uploadcare.full.min.js"></script>
@@ -1119,6 +1119,7 @@
 
 </body>
 </html>
+
 
 
 
