--- a/index.html
+++ b/index.html
@@ -724,6 +724,7 @@
                             { file: "wmed (43).png", name: "bojem siem kombiemt" },
                             { file: "wmed (44).png", name: "eepy sleepy" },
                             { file: "wmed (45).png", name: "zakazane słowa" },
+                            { file: "ackschoually.png", name: "erm, ackschoually" },
                             { file: "meowbucks.png", name: "mmm kawusia" },
                             { file: "kapibara_książkara.png", name: "kapibara książkara" },
                             { file: "dontworrybecappy.png", name: "dont worry be cappy" },
@@ -858,7 +859,7 @@
         
         <div class="contact-box">
             <h4 style="margin-top:0; color:var(--primary); text-transform:uppercase; margin-bottom: 5px;">
-                <i class="fa-regular fa-comments"></i> Masz pytania?
+                <i class="fa-regular fa-comments"></i> Masz pytania? Chcesz odebrać zamówienie w innym terminie? Napisz do nas!
             </h4>
             <div style="display: flex; gap: 10px;">
                 <a href="https://www.facebook.com/profile.php?id=61584627429588" target="_blank" class="contact-btn fb">
@@ -1241,3 +1242,4 @@
 
 </body>
 </html>
+
