--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             <div class="accordion-content">
                 <div style="text-align: center; padding: 10px; margin-bottom: 20px; color: #555;">
                     <p style="margin: 0; font-style: italic; line-height: 1.5;">
-                        Nie oceniamy, my tylko <b>analizujemy</b>.<br>
+                        ✨ Słuchamy nie oceniamy ✨
                         Zestaw obowiązkowy na każde zajęcia z psychologii klinicznej (i nie tylko).<br>
                         <span style="color: #00b894; font-weight:bold;">Freud byłby dumny!</span> 🛋️
                     </p>
@@ -504,6 +504,7 @@
                             { file: "freud.png", name: "your mom" },
                             { file: "freud2.png", name: "Freud Classic" },
                             { file: "freud_pink.png", name: "ciemna strona twojej psychiki" },
+                            { file: "s_nie_oc.png", name: "oceniamy nie słuchamy" },
                             { file: "keep_talking.png", name: "keep yapping!" }
                         ];
 
@@ -1290,5 +1291,6 @@
 
 </body>
 </html>
+
 
 
