--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                         const memy = [
                             "wmed (19).png", "wmed (21).png", "wmed (23).png", "wmed (24).png", 
                             "wmed (25).png", "wmed (26).png", "wmed (27).png", "wmed (28).png", 
-                            "wmed (29).png", "wmed (30).png", "wmed (31).png", "wmed (35).png", 
+                            "wmed (29).png", "szrodinger.png", "wmed (31).png", "wmed (35).png", 
                             "wmed (4).png", "wmed (5).png", "wmed (18).png"
                         ];
                         memy.forEach((file, i) => {
@@ -1304,6 +1304,7 @@
 
 </body>
 </html>
+
 
 
 
