--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
                             { file: "wmed (26).png", name: "załóżmy, że jestem kulą" },
                             { file: "fizykburger.png", name: "certified fan of fizykburger" },
                             { file: "wmed (33).png", name: "szrodinger" },
+                            { file: "szrodinger.png", name: "be or not to be" },
                             { file: "wmed (19).png", name: "najwazniejszy filar wydziału" },
                             { file: "wmed (3).png", name: "czarna dziura" },
                             { file: "gastro.png", name: "kocham gastro" },
@@ -1304,6 +1305,7 @@
 
 </body>
 </html>
+
 
 
 
