--- a/index.html
+++ b/index.html
@@ -283,20 +283,22 @@
     </a>
 </div>
 
-<div class="event-banner">
-    <div>
-        🚨 STOISKO: 17 & 18 GRUDNIA! FUW, HALL GŁÓWNY
-        <span class="event-highlight">🎡 Koło Fortuny </span> 
-        <span class="event-highlight">📦 Odbiór zamówień </span> 
-        <br style="display:none;" class="mobile-break">
-        <span class="event-highlight">📸 Fotobudka świąteczna </span>
-        <span style="color:yellow; text-shadow:0 1px 2px black;">🎓 17.12, 14:00 - ZDJĘCIE Z DZIEKANEM!</span>
+<div class="event-banner" style="background: linear-gradient(90deg, #6c5ce7, #a29bfe, #0984e3);">
+    <div style="line-height: 1.3; padding: 5px 0;">
+        📢 <b>AKTUALNOŚCI:</b> DZIĘKUJEMY ZA SZTURM! 🤯 Przerosło to nasze zapasy!
+        <br style="display:block; margin: 2px 0;" class="mobile-break">
+        <span class="event-highlight" style="background: #d63031; color: white; border: 1px solid white;">
+            ⚠️ Zamówienia po 18.12 (16:00) = realizacja PO ŚWIĘTACH
+        </span> 
+        <span style="font-weight:bold; color: #ffeaa7; margin-left: 5px;">
+            ✨ NOWY ROK = NOWY DROP! ✨
+        </span>
     </div>
 </div>
 
 <div class="promo-banner">
     <div class="marquee">
-        🔥 SALE SALE SALE! 🔥 3+1: KUP 3 - CZWARTĄ DOSTANIESZ GRATIS (NA TĘ SAMĄ CENĘ)! 🔥 DODATKOWO PRZY ZAKUPIE POWYŻEJ 15 SZTUK ŁAPIESZ -10% NA WSZYSTKO! 🔥 ZAPRASZAMY NA STOISKO! 🔥 SALE SALE SALE! 🔥
+        💖 DZIĘKUJEMY ZA WSPARCIE! 💖 ZE WZGLĘDU NA BRAK MATERIAŁÓW (WYKUPILIŚCIE WSZYSTKO!) NOWE ZAMÓWIENIA BĘDĄ GOTOWE DOPIERO W NOWYM ROKU 💖 SZYKUJCIE SIĘ NA NOWY DROP W STYCZNIU! 💖 SALE SALE SALE! 3+1 NADAL AKTYWNE! 💖
     </div>
 </div>
 
@@ -1303,6 +1305,7 @@
 
 </body>
 </html>
+
 
 
 
