--- a/index.html
+++ b/index.html
@@ -283,22 +283,23 @@
     </a>
 </div>
 
-<div class="event-banner" style="background: linear-gradient(90deg, #6c5ce7, #a29bfe, #0984e3);">
-    <div style="line-height: 1.3; padding: 5px 0;">
-        📢 <b>AKTUALNOŚCI:</b> DZIĘKUJEMY ZA SZTURM! 🤯 Przerosło to nasze zapasy!
-        <br style="display:block; margin: 2px 0;" class="mobile-break">
-        <span class="event-highlight" style="background: #d63031; color: white; border: 1px solid white;">
-            ⚠️ Zamówienia po 18.12 (16:00) = realizacja PO ŚWIĘTACH
-        </span> 
-        <span style="font-weight:bold; color: #ffeaa7; margin-left: 5px;">
-            ✨ NOWY ROK = NOWY DROP! ✨
+<div class="event-banner" style="background: linear-gradient(90deg, #2d3436, #636e72); border-bottom: 2px solid #fab1a0;">
+    <div style="line-height: 1.3; padding: 8px 5px;">
+        📢 <b>AKTUALNOŚCI:</b> Mimo braku materiałów...
+        <span style="color: #55efc4; font-weight: 900; text-transform: uppercase; letter-spacing: 1px;">
+            ✅ MOŻNA ZAMAWIAĆ ONLINE! (24/7)
+        </span>
+        <br style="display:block; margin: 3px 0;" class="mobile-break">
+        <span style="font-size: 0.75rem; color: #dfe6e9;">
+            ⚠️ Realizacja po Nowym Roku (brak materiałów) • 
+            🚫 Sprzedaż części logotypów wstrzymana (umowy z wydziałami).
         </span>
     </div>
 </div>
 
 <div class="promo-banner">
     <div class="marquee">
-        💖 DZIĘKUJEMY ZA WSPARCIE! 💖 ZE WZGLĘDU NA BRAK MATERIAŁÓW (WYKUPILIŚCIE WSZYSTKO!) NOWE ZAMÓWIENIA BĘDĄ GOTOWE DOPIERO W NOWYM ROKU 💖 SZYKUJCIE SIĘ NA NOWY DROP W STYCZNIU! 💖 SALE SALE SALE! 3+1 NADAL AKTYWNE! 💖
+        💖 DZIĘKUJEMY ZA SZTURM! 💖 ZE WZGLĘDU NA UMOWY Z WYDZIAŁAMI SPRZEDAŻ NIEKTÓRYCH LOGOTYPÓW JEST WSTRZYMANA (WCHEM, MIMUW, WB) 💖 ALE SPOKOJNIE - NADAL MOŻECIE ZAMAWIAĆ ONLINE PRZEZ STRONĘ! 💖 REALIZACJA ZAMÓWIEŃ I NOWY DROP - DOPIERO W NOWYM ROKU! 💖
     </div>
 </div>
 
@@ -1276,17 +1277,21 @@
                 <hr style="margin:10px 0; border:0; border-top:1px dashed #ccc;">
                 ${paymentInfo}
                 
-                <div style="margin-top:15px; background:#f8f9fa; padding:12px; border-radius:8px; font-size:0.85rem; text-align:left; border: 1px solid #eee;">
-                    <div style="margin-bottom:8px;">
-                        <i class="fa-solid fa-location-dot" style="color:#4834d4;"></i> <strong>Odbiór na stoisku:</strong><br>
-                        <span style="display:block; margin-left:18px;">17-18 Grudnia, FUW (Hall Główny)</span>
+                <div style="margin-top:15px; background:#fff3cd; padding:15px; border-radius:8px; font-size:0.9rem; text-align:left; border: 1px solid #ffeeba; color: #856404;">
+                    <div style="margin-bottom:10px;">
+                        <i class="fa-solid fa-calendar-days"></i> <strong>KIEDY ODBIÓR?</strong><br>
+                        Ze względu na ogromne zainteresowanie i przerwę świąteczną, 
+                        <b>termin odbioru zostanie ogłoszony na naszym Facebooku!</b> 📢
                     </div>
-                    <div style="border-top:1px solid #e0e0e0; padding-top:8px; margin-top:8px;">
-                        <i class="fa-solid fa-envelope" style="color:#4834d4;"></i> <strong>Inny termin?</strong><br>
-                        <span style="display:block; margin-left:18px;">
-                            Możliwy odbiór w dowolnym terminie po kontakcie: 
-                            <a href="mailto:pinmeup.fuw@gmail.com" style="color:#4834d4; font-weight:bold; text-decoration:none;">pinmeup.fuw@gmail.com</a>
-                        </span>
+                    
+                    <div style="margin-bottom:10px;">
+                        <i class="fa-solid fa-rocket"></i> <strong>CO DALEJ?</strong><br>
+                        Zamówienie jest przyjęte. Obserwuj nas - szykujemy <b>NOWY DROP</b> na Nowy Rok! ✨
+                    </div>
+
+                    <div style="font-size: 0.8rem; margin-top: 10px; border-top: 1px solid #ececec; padding-top: 5px;">
+                        Masz pytania? Pisz: 
+                        <a href="mailto:pinmeup.fuw@gmail.com" style="color:#856404; font-weight:bold;">pinmeup.fuw@gmail.com</a>
                     </div>
                 </div>
             `;
@@ -1305,6 +1310,7 @@
 
 </body>
 </html>
+
 
 
 
