--- a/index.html
+++ b/index.html
@@ -291,15 +291,15 @@
         </span>
         <br style="display:block; margin: 3px 0;" class="mobile-break">
         <span style="font-size: 0.75rem; color: #dfe6e9;">
-            ⚠️ Realizacja po Nowym Roku (brak materiałów) • 
-            🚫 Sprzedaż części logotypów wstrzymana (umowy z wydziałami).
+            ⚠️ Realizacja po Nowym Roku (przez brak materiałów) • 
+            🚫 Sprzedaż części logotypów wstrzymana: MIMUW, WB, WCHEM (umowy z wydziałami).
         </span>
     </div>
 </div>
 
 <div class="promo-banner">
     <div class="marquee">
-        💖 DZIĘKUJEMY ZA SZTURM! 💖 ZE WZGLĘDU NA UMOWY Z WYDZIAŁAMI SPRZEDAŻ NIEKTÓRYCH LOGOTYPÓW JEST WSTRZYMANA (WCHEM, MIMUW, WB) 💖 ALE SPOKOJNIE - NADAL MOŻECIE ZAMAWIAĆ ONLINE PRZEZ STRONĘ! 💖 REALIZACJA ZAMÓWIEŃ I NOWY DROP - DOPIERO W NOWYM ROKU! 💖
+        💖 DZIĘKUJEMY ZA SZTURM! 💖 ZE WZGLĘDU NA UMOWY Z WYDZIAŁAMI SPRZEDAŻ NIEKTÓRYCH LOGOTYPÓW JEST WSTRZYMANA (WCHEM, MIMUW, WB) 💖 ALE SPOKOJNIE - NADAL MOŻECIE ZAMAWIAĆ ONLINE PRZEZ STRONĘ! 💖 REALIZACJA ZAMÓWIEŃ I NOWY DROP - DOPIERO W NOWYM ROKU! OBSERWUJCIE NASZEGO FB 💖
     </div>
 </div>
 
@@ -403,14 +403,14 @@
                             {name: "FUW Skrót 1", file: "fuw __ skrót (3).png"},
                             {name: "FUW Skrót 2", file: "fuw __ skrót.png"},
                             {name: "Fuw baloon", file: "wmed (20).png"},
-                            {name: "MIMUW (Łacina)", file: "[łac] mimuw __ pełne vel 2.png"},
-                            {name: "MIMUW (PL)", file: "[PL] mimuw __ pełne.png"},
-                            {name: "MIMUW Sygnet", file: "[PL] mimuw __ sygnet.png"},
-                            {name: "MIMUW (EN)", file: "[EN] mimuw __ pełne.png"},
-                            {name: "WCHEM (EN)", file: "[EN] wchem.png"},
-                            {name: "WCHEM (PL)", file: "[PL] wchem.png"},
+                            // {name: "MIMUW (Łacina)", file: "[łac] mimuw __ pełne vel 2.png"},
+                            // {name: "MIMUW (PL)", file: "[PL] mimuw __ pełne.png"},
+                            // {name: "MIMUW Sygnet", file: "[PL] mimuw __ sygnet.png"},
+                            // {name: "MIMUW (EN)", file: "[EN] mimuw __ pełne.png"},
+                            // {name: "WCHEM (EN)", file: "[EN] wchem.png"},
+                            // {name: "WCHEM (PL)", file: "[PL] wchem.png"},
                             {name: "Pin Me Up", file: "pinmeup (3).png"},
-                            {name: "Wydział Biologii", file: "wb.png"},
+                            // {name: "Wydział Biologii", file: "wb.png"},
                             {name: "[EN] Psychology",  file: "[EN]_psych.png"},
                             {name: "[PL] Psychologia white-black", file: "[PL]_psych.png"},
                             {name: "[PL] Psychologia black-white", file: "[PL]_psych2.png"},
@@ -1310,6 +1310,7 @@
 
 </body>
 </html>
+
 
 
 
